# transport-atlas

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: pipeline.yaml  venues.yaml
docker/: embed.Dockerfile  run_embed.sh
docs/plans/: reviewer_tool_abc.md
paper/: README.md  contributions.md  data_plan.md  outline.md  related_work.md  research_questions.md
paper/analysis/: 01_descriptive_tables.py  02_coauthor_structure.py  03_partition_alignment.py  04_phantom_eval.py  05_trajectory_taxonomy.py  06_collaboration_style.py  06_render_atlas_views.py  07_author_personality.py  07_sr_comparables.py  08_ablation_embeddings.py  build_alias_candidates.py  lookup_choi_sun.py
scripts/: 01_ingest.py  02_dedupe.py  02b_crossref_citations.py  03_graph.py  03b_annotate_all_coauthors.py  03c_relayout_lcc.py  04_render.py  05_embed_papers.py  05a_embed_sanity.py  06_author_similarity.py  06b_reflag_phantoms.py  07_phantom_eval.py  08_finetune_specter2.py  09_embed_papers_ft.py  10_reviewer_index.py  11_export_specter2_onnx.py  _range_server.py  audit_author_keys.py  refresh.py
src/transport_atlas/: __init__.py
src/transport_atlas/ingest/: _http.py  elsevier.py  ieee.py  openalex.py
src/transport_atlas/process/: aggregate.py  authors.py  coauthor_graph.py  dedupe.py  frontmatter.py
src/transport_atlas/site/: render.py
src/transport_atlas/site/templates/: base.html  by_year.html  coauthor_network.html  collab_style.html  index.html  (+7 more)
src/transport_atlas/utils/: config.py  logger.py
tests/: test_authors.py  test_dedupe.py
tests/fixtures/: small_corpus.json
